assets/scss/_laptop.scss
// RESETS
* html .clearfix             { zoom: 1; } /* IE6 */
*:first-child+html .clearfix { zoom: 1; } /* IE7 */
.clearfix:before,
.clearfix:after {
        content: "";
        display: table;
} 
.clearfix:after {
        clear: both;
}
.clearfix {
        zoom: 1; /* For IE 6/7 (trigger hasLayout) */
}

.laptop {
    * {
    	margin: 0;
    	padding: 0;
    	border: 0;
    	box-sizing: border-box;
    	-webkit-font-smoothing: antialiased;
    }
    a, a:hover, a:focus, a:active {
    	text-decoration: none!important;
    	outline: none;
    }
    .npd{
    	padding: 0;
    }
    ul,li{
    	padding: 0;
    	margin: 0;
    	list-style: none;
    }
    a:hover{
    	opacity: 0.7;
    	color: white;
    }
    body{
    	font-size: 14px;
    	color: black;
    }
    .clear{
    	clear: both;
    }
    img{
    	max-width: 100%;
    }
    h1, h2, h3, h4{
    	padding: 0;
    	margin: 0;
    }
    // VARIABLES
    $mainblack: #22262b;
    $amain: #fbb053;
    $display: #abadc6;
    $item: #d1c9bf;
    $codred: #ac5e47;

    // MISC
    .wrap{
    	width: 100%;
    	position: relative;
    	display: flex;
    	justify-content: center;
    	align-items: center;
        margin-top: 50px;
        margin-bottom: 50px;
    }
    .comp {
        width: fit-content;
        height: 194px;
        text-align: center;

        .monitor{
            width: 275px;
            height: 181px;
            display: block;
            margin: 0 auto;
            border-radius: 10px 10px 0px 0px;
            padding: 9px;
            border: solid 1px var(--laptop-chassis);
            background-color: black;
        }

        .screen{
            background-color: #161913;
            display: grid;
            place-items: center;
            height: 100%;
            position: relative;
            width: 100%;    
        }
    	@keyframes code {
            0% {
    			opacity: 1;
            }
            50% {
    			opacity: 0.6;
            }
            100% {
    			opacity: 1;
            }
    	}

    }

    .base {
            width: 338px;
            height: 12px;
            background: var(--laptop-chassis);
            display: block;
            margin: 0 auto;
            border-radius: 0px 0px 6px 6px;
    }  


    .main-container {

    	display: flex;
    	Justify-content: center;
    	align-items: center;
    	position: relative;
    	height: 63px;
    	width: 66px;
    }

    @keyframes flicker {
        0% {
            opacity: 1;
        }
    	18% {
            opacity: 1;
        }
    	19% {
            opacity: 0;
        }
    	20% {
            opacity: 1;
        }
    	96% {
        opacity: 1;
    	}
    	97% {
        opacity: 0;
    	}
    	98% {
        opacity: 1;
    	}
    }

    .countries-container {
    	display: flex;
    	justify-content: flex-start;
    	align-items: center;
    	position: absolute;
    	height: 96%;
    	width: 96%;
    	border-radius: 100px;
    	overflow: hidden;
    	z-index: 2;
    }

    .countries {
    	position: absolute;
    	animation: axis-spin 5s steps(24) infinite;
    }

    @keyframes axis-spin {
        from {
            transform: translatex(0px);
        }
        to {
            transform: translatex(-123px);
        }
    }

    .globe {
    	position: absolute;
    	filter: drop-shadow(-2px -2px 8px #aaffaa) drop-shadow(2px 2px 3px #22ff22);
    }

    .screen .overlaid {
        display: flex;
    	justify-content: center;
    	align-items: center;
        position: absolute;
        height: 162px;
        width: 256px;

        &:before {
            content: "";
            position: absolute;
            inset: 0;
            display: block;
            pointer-events: none;
            background-image: linear-gradient(
                    rgba(#101010, 0.25) 50%,
                    rgba(16, 16, 16, 0.1) 50%
                ),
                linear-gradient(
                    90deg,
                    rgba(255, 0, 0, 0.015),
                    rgba(0, 255, 0, 0.01),
                    rgba(0, 0, 255, 0.015)
                );
            background-size: 100% 0.1875rem, 0.375rem 100%;
            z-index: 2;
        }

        &:after {
            content: "";
            position: absolute;
            inset: 0;
            display: block;
            pointer-events: none;
            background-color: rgba(23, 23, 23, 0.2);
            animation: flicker 0.3s infinite;
            z-index: 2;
        }
    }

    @keyframes flicker {
        0% {
            opacity: 0.15795;
        }
        5% {
            opacity: 0.31511;
        }
        10% {
            opacity: 0.94554;
        }
        15% {
            opacity: 0.2469;
        }
        20% {
            opacity: 0.62031;
        }
        25% {
            opacity: 0.0293;
        }
        30% {
            opacity: 0.00899;
        }
        35% {
            opacity: 0.5344;
        }
        40% {
            opacity: 0.12778;
        }
        45% {
            opacity: 0.52042;
        }
        50% {
            opacity: 0.3823;
        }
        55% {
            opacity: 0.2198;
        }
        60% {
            opacity: 0.9383;
        }
        65% {
            opacity: 0.86615;
        }
        70% {
            opacity: 0.68695;
        }
        75% {
            opacity: 0.55749;
        }
        80% {
            opacity: 0.96984;
        }
        85% {
            opacity: 0.0361;
        }
        90% {
            opacity: 0.24467;
        }
        95% {
            opacity: 0.08351;
        }
        100% {
            opacity: 0.54813;
        }
    }
}

